<?xml version="1.0"?>
<package format="3">
  <name>ros2_tf2</name>
  <version>0.0.0</version>
  <description>TF2 Transform Broadcaster Example</description>

  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>tf2_ros</depend>
  <depend>geometry_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>